# High-Availability-Module-Hot-Swap

./: .gitignore  CMakeLists.txt  Makefile  README.md  dockerfile
docs/: MODULE_GUIDE.md
examples/: advanced_demo.cpp  health_monitor_demo.cpp  logging_demo.cpp  main.cpp  phase2_test.cpp  phase3_test.cpp  phase4_test.cpp  phase5_test.cpp  simple_demo.cpp
include/core/: stateData.h
include/modules/: module.h  moduleState.h
src/: main.cpp
src/core/: DynamicLibrary.cpp  DynamicLibrary.hpp  HealthMonitor.cpp  HealthMonitor.hpp  IModule.cpp  IModule.hpp  ModuleFactory.hpp  ModuleInfo.hpp  ModuleManager.cpp  ModuleManager.hpp
src/modules/: CalculatorModule.cpp  CalculatorModule.hpp  CalculatorModuleV1.cpp  CalculatorModuleV1.hpp  CalculatorModuleV2.cpp  CalculatorModuleV2.hpp  SimpleModule.cpp  SimpleModule.hpp  TextProcessorV1.cpp  TextProcessorV1.hpp  module.cpp  moduleState.cpp
src/utils/: Logger.cpp  Logger.hpp  logging_config.hpp
tests/: run_all_tests.sh  test_basic_loading.cpp  test_duplicate_loading.cpp  test_invalid_module.cpp  test_stress.cpp
